perf: reuse the compiled builder for boolean probes and drop redundant map copies
- collectUnsupportedBooleans built a second full StepCadBuilder (93k map
  copy + all caches) per export and re-ran buildSolid on it; it now uses
  the builder buildPayload already holds, so the solids cache is effective
- StepEntityResolver.resolveAll returns an unmodifiable view instead of
  Map.copyOf: skips a 93k-entry rehash, and the declaration order survives
  (mesh face ordering follows resolved.values())
- StepCadBuilder holds the caller's map directly instead of copying again